fix: #2558 make modal readable

--- a/src/style/themes/antd-kf-theme.less
+++ b/src/style/themes/antd-kf-theme.less
@@ -68,7 +68,9 @@
 //Table
 @table-header-bg: #f9f9fb; //@background-color-light
 
+h1,
 h2,
+h3,
 h4 {
   color: #2b388f;
   margin: 0;
@@ -82,6 +84,12 @@ h4 {
 
 h2 {
   font-size: 22px;
+}
+
+h3 {
+  font-size: 16px;
+  line-height: 1;
+  letter-spacing: 0.3px;
 }
 
 h4 {
